Ported to 1.19.2 (PR#71, Damian)